# s21_3DViewer_v1.0

./: README.md
src/: Makefile
src/Model/: parser.c  parser.h  transformation.c  transformation.h  vector.c  vector.h
src/Tests/: parser_t.c  run_tests.c  tests.h  transformation_t.c
src/View/: CMakeLists.txt  joystick.cpp  joystick.h  main.cpp  myglwidget.cpp  myglwidget.h  s21_mainwindow.cpp  s21_mainwindow.h  settings.cpp  settings.h
